risolto un bug che non faceva eliminare i messaggi con la dark mode attiva

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .dark-mode{
-    filter: invert(1);
+    filter: invert(.9);
 }
 .reset-dark{
     filter: invert(1);
@@ -29,7 +29,7 @@ body{
     font-size: 12px;
     color: #009688;
     font-weight: 500;
-    margin-right: 5px;
+    cursor: pointer;
 }
 
 /* posizione della finestra principale, che contiene tutto il contenuto */
